# co-writer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  RAILWAY.md  README.md  RUN.md  docker-compose.prod.yml  docker-compose.yml  run.sh
.github/workflows/: ci.yml
apps/api/: .env.example  .env.production.example  Dockerfile  entrypoint.sh  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: admin.py  auth.py  auth_legacy.py  billing.py  chapters.py  characters.py  clerk_webhook.py  flow.py  llm.py  rag.py  scenes.py  stories.py  story_check.py
apps/api/app/core/: config.py  deps.py  errors.py  plans.py  security.py
apps/api/app/db/: models.py  schemas.py  session.py
apps/api/app/routers/: export_pub.py
apps/api/app/services/: clerk_service.py  context_builder.py  embedding_service.py  export_service.py  flow_service.py  graph_service.py  identity_service.py  llm_service.py  observer_service.py  publishing_export_service.py  rag_service.py  storage_service.py  story_check_service.py  version_service.py
apps/api/app/services/llm/: anthropic_provider.py  base.py  factory.py  fallback.py  gemini_provider.py  lmstudio.py  openai_compatible.py  openai_provider.py  openrouter_provider.py  presets.py  roles.py
apps/api/app/workers/: export_worker.py
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_llm_routing.py  test_smoke.py
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  (+4 more)
(+28 files in other folders)
