[project]
name = "gink-api"
version = "0.1.0"
description = "G-Ink Novel Studio backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
  "neo4j>=5.20.0",
  "qdrant-client>=1.11.0",
  "bcrypt>=4.0.0",
  "pyjwt>=2.9.0",
  "cryptography>=43.0.0",
  "python-multipart>=0.0.9",
  "openai>=1.50.0",
  "anthropic>=0.40.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
